--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,6 +9,7 @@
 
     <ImageView
         android:id="@+id/logo"
+        android:src="@drawable/ic_logo"
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_marginStart="100dp"
@@ -24,7 +25,7 @@
         android:layout_width="317dp"
         android:layout_height="45dp"
         android:layout_marginStart="15dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="40dp"
         android:layout_marginEnd="15dp"
         android:background="@drawable/rounded_edittext"
         android:drawableLeft="@drawable/mail"
