--- a/app/src/main/res/layout/signup_fragment.xml
+++ b/app/src/main/res/layout/signup_fragment.xml
@@ -25,7 +25,7 @@
             android:hint="@string/email_address"
             android:inputType="textWebEmailAddress|textPersonName"
             android:textAlignment="viewStart"
-            android:textColor="#3C0A090B"
+            android:textColor="#000000"
             android:textColorHint="#696969"
             android:textSize="14sp"
             android:textStyle="normal"
@@ -49,7 +49,7 @@
             android:hint="@string/password"
             android:inputType="textPassword"
             android:textAlignment="viewStart"
-            android:textColor="#3C0A090B"
+            android:textColor="#000000"
             android:textColorHint="#696969"
             android:textSize="14sp"
             android:textStyle="normal"
@@ -69,10 +69,10 @@
             android:drawableLeft="@drawable/password"
             android:drawablePadding="5dp"
             android:ems="10"
-            android:hint="Confirm Password"
+            android:hint="@string/confirm_password"
             android:inputType="textPassword"
             android:textAlignment="viewStart"
-            android:textColor="#3C0A090B"
+            android:textColor="#000000"
             android:textColorHint="#696969"
             android:textSize="14sp"
             android:textStyle="normal"
@@ -82,7 +82,7 @@
             app:layout_constraintTop_toBottomOf="@+id/password" />
 
         <TextView
-            android:id="@+id/login"
+            android:id="@+id/signup"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginStart="16dp"
@@ -128,12 +128,13 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
-            android:text="RideMate allows only verified student for safety.  Please use your university email"
-            android:textSize="16.5sp"
+            android:text="@string/security"
+            android:textSize="15.5sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            tools:layout_editor_absoluteY="105dp" />
+            tools:layout_editor_absoluteY="105dp"
+            tools:ignore="MissingConstraints" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
