--- a/app/src/main/res/layout/recover_password_fragment.xml
+++ b/app/src/main/res/layout/recover_password_fragment.xml
@@ -4,11 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".signUp.recoverPassword" >
+    tools:context=".signUp.recoverPassword">
+
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?actionBarSize"
+        app:navigationIcon="@drawable/ic_arrow_back" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_marginHorizontal="10dp">
 
 
         <TextView
@@ -18,7 +25,7 @@
             android:layout_marginStart="10dp"
             android:layout_marginTop="52dp"
             android:layout_marginEnd="10dp"
-            android:text="Forgot "
+            android:text="@string/forgot_your_password"
             android:textColor="#000000"
             android:textSize="28sp"
             android:textStyle="bold"
@@ -67,7 +74,7 @@
             tools:ignore="MissingConstraints,TextFields" />
 
         <TextView
-            android:id="@+id/reset"
+            android:id="@+id/sign"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginStart="10dp"
@@ -81,6 +88,7 @@
             android:freezesText="false"
             android:gravity="center"
             android:onClick="login"
+            android:text="@string/txt_continue"
             android:textAlignment="center"
             android:textColor="@color/white"
             android:textSize="16sp"
