Bottom navigation bar implemented complete

--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -1,6 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/text2"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Account"/>
+    tools:context=".Account">
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/account"
+        app:autoSizeMaxTextSize="50dp" />
+</FrameLayout>
+
