--- a/app/src/main/res/layout/homepage_fragment.xml
+++ b/app/src/main/res/layout/homepage_fragment.xml
@@ -5,7 +5,7 @@
 <FrameLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".homepage">
+    tools:context=".Homepage">
 <androidx.constraintlayout.widget.ConstraintLayout
 android:layout_width="match_parent"
 android:layout_height="match_parent">
