account xml done

--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -26,7 +26,8 @@
             android:layout_gravity="center"
             android:layout_marginTop="20dp"
             android:textColor="@color/black"
-            android:text="@string/orny" />
+            android:text="@string/orny"
+            android:textStyle="bold"/>
 
         <TextView
             android:id="@+id/edit_profile"
